--- a/testing/index.html
+++ b/testing/index.html
@@ -13,7 +13,7 @@
 		<meta charset="UTF-8"> 
 		<meta name=viewport content="width=device-width, initial-scale=0.6">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="fonts.css">
+		<link rel="stylesheet" type="text/css" href="/fonts.css">
 	</head>
 	<body>
 		<p>
