Fixed html src path error

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<title>Owen Shepherd</title>
 		<meta charset="UTF-8"> 
 		<meta name=viewport content="width=device-width, initial-scale=0.6">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="fonts.css">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" type="text/css" href="/fonts.css">
 		<meta property="og:title" content="Owen Shepherd" />
 		<meta property="og:url" content="https://owen.cafe/" />
 		<meta property="og:image" content="https://owen.cafe/images/Turtle-SVG.min.svg" />
