--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 		</p>
 		<script src="/nutmeg/nutmeg.min.js"></script>
 		<script src="/nutmeg/nutmeg-router.min.js"></script>
+		<script src="/common.js"></script>
+		<script src="/md.js"></script>
 		<script src="/index.min.js"></script>
 		<script src="/cow/1.0/cow.min.js"></script>
 	</body>
