--- a/testing.html
+++ b/testing.html
@@ -26,6 +26,8 @@
 		</p>
 		<script src="/nutmeg/nutmeg.js"></script>
 		<script src="/nutmeg/nutmeg-router.js"></script>
+		<script src="/common.js"></script>
+		<script src="/md.js"></script>
 		<script src="/index.js"></script>
 		<script src="/cow/1.0/cow.min.js"></script>
 	</body>
