Added noscript tag

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
 		<meta property="og:description" content="A site to host my personal projects" />
 	</head>
 	<body>
-		<p>
-		This page requires javascript to be enabled, as it uses a
-		website generator I wrote, called <a href="https://github.com/414owen/Nutmeg-Core">Nutmeg</a>.
-		</p>
+		<noscript>
+			<p>
+				This page requires javascript to be enabled, as it uses a
+				website generator I wrote, called
+				<a href="https://github.com/414owen/Nutmeg-Core">Nutmeg</a>.
+			</p>
+		</noscript>
 		<script src="/nutmeg/nutmeg.min.js"></script>
 		<script src="/nutmeg/nutmeg-router.min.js"></script>
 		<script src="/common.js"></script>
